# python-unstructured.v2

./: .gitignore  01_quickstart.py  02_cleaning.py  03_extraction.py  04_chunking.py  05_loader.py  Makefile  main.py  pyproject.toml
data/: circuit-breaker.txt
